theme is cached in localstorage to stop flicker on page load. Empty lines in song are rendered as <br>

--- a/app/assets/stylesheets/components/song_display.scss
+++ b/app/assets/stylesheets/components/song_display.scss
@@ -52,13 +52,12 @@ div[data-react-class='SongDisplay'] {
     font-size: 9px;
   }
   .comment, .transpose-preset {
-    margin-bottom: 8px;
     color: darkgray;
     font-size: 90%;
   }
 
   .transpose-preset {
-    display: inline-block;
+    display: block;
     padding-right: 15px;
     cursor: pointer;
     -webkit-user-select: none;
